--- a/src/components/Interests.css
+++ b/src/components/Interests.css
@@ -3,13 +3,6 @@
   margin-top: 30px;
 }
 
-.container-one {
-  flex: 0 0 25%;
-}
-
-.container-two {
-  flex: 0 0 25%;
-}
 
 .one-1,
 .one-2,
@@ -86,4 +79,6 @@
     cursor: pointer;
 
   }
-  
+.container-two{
+  margin-right: 20px;
+}
