institucional falta css

--- a/src/components/Interests.css
+++ b/src/components/Interests.css
@@ -1,8 +1,18 @@
 .interests-container {
   display: flex;
   margin-top: 30px;
+  margin-left: 45px;
+
+}
+.container-one {
+  flex: 25%;
+
 }
 
+.container-two {
+  flex: 25%;
+
+}
 
 .one-1,
 .one-2,
