--- a/src/components/StartPages/Pages1.css
+++ b/src/components/StartPages/Pages1.css
@@ -3,12 +3,13 @@
   }
   
   .primery-container-1 {
-    margin-top: 50px;
-    width: 60%;
+    margin-top: 30px;
+    margin-right: -40px;
+    width: 80%;
   }
   
   .secundary-container-1 {
-    width: 40%;
+    width: 50%;
   }
   .section-one-1{
     margin-left: 20px;
