--- a/src/components/Start.css
+++ b/src/components/Start.css
@@ -1,41 +1,42 @@
 .start-container {
-    display: flex;
-  }
-  
-  .primery-container {
-    margin-top: 50px;
-    width: 60%;
-  }
-  
-  .secundary-container {
-    width: 40%;
-  }
-  .section-one{
-    margin-left: 20px;
-    margin-right: 30px;
-  }
-  .section-one h4, p{
-    text-align: justify;
-  }
+  display: flex;
+}
 
+.primery-container {
+  margin-top: 30px;
+  margin-right: -40px;
+  width: 80%;
+
+}
+
+.secundary-container {
+  width: 50%;
+}
+.section-one {
+  margin-left: 20px;
+  margin-right: 30px;
+}
+.section-one h4,
+p {
+  text-align: justify;
+}
 
 #im1,
-#im2{
-    width: 350px;
-    height: 250px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
+#im2 {
+  width: 350px;
+  height: 250px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
 }
 .container-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  li{
-    margin-top: 10px;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+li {
+  margin-top: 10px;
+}
 li:hover {
-    cursor: pointer;
-
-  }
+  cursor: pointer;
+}
