navbar acabado falta css y responsive

--- a/src/components/Institucional/MisionVision.css
+++ b/src/components/Institucional/MisionVision.css
@@ -1,9 +1,6 @@
-
-#imn{
-    width: 350px;
-    height: 250px;
+#ge{
+    
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
 }
-  
