--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,3 +12,22 @@
     color: black;
     text-decoration: none;
 }
+/* Media queries para dispositivos pequeños */
+@media only screen and (max-width: 768px) {
+    
+  
+    .footer p,
+    .footer a {
+      margin-bottom: 10px;
+    }
+  }
+  
+  /* Media queries para dispositivos extra pequeños */
+  @media only screen and (max-width: 480px) {
+   
+  
+    .footer p,
+    .footer a {
+      margin-bottom: 5px;
+    }
+  }
