--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,28 +6,10 @@
     margin-left: 20px;
     margin-right: 20px;
 }
-.footer-container p, a{
-    
-    margin: 0;
+.footer-container a{
     color: black;
     text-decoration: none;
 }
-/* Media queries para dispositivos pequeños */
-@media only screen and (max-width: 768px) {
-    
-  
-    .footer p,
-    .footer a {
-      margin-bottom: 10px;
-    }
-  }
-  
-  /* Media queries para dispositivos extra pequeños */
-  @media only screen and (max-width: 480px) {
-   
-  
-    .footer p,
-    .footer a {
-      margin-bottom: 5px;
-    }
-  }
+.footer-container p{
+  margin: 0px;
+}
